<resources>
    <string name="app_name">Interface S Plus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_new_service">NewService</string>
    <string name="volver">Volver</string>
    <string name="siguiente">Siguiente</string>


    <string name="nueva_inspeccion">Nueva Inspección</string>
    <string name="historial">Ir al Historial</string>
    <string name="informacion">Información</string>

    <string name="id_equipo_ingreso">Identificación de Equipo</string>

    <string name="no_identificacion">No Identificación</string>
    <string name="no_identificacion_su">Habilita el campo de Número de identificación al momento de registrar un equipo o vehículo</string>

    <string name="placa">Placa</string>
    <string name="placa_su">Habilita el campo Placa al momento de registrar un equipo o vehículo</string>

    <string name="c_vin">Códgio VIN</string>
    <string name="c_vin_su">Habilita el campo Código de VIN al momento de registrar un equipo o vehículo</string>

    <string name="otro_codigo">Otro Código</string>
    <string name="otro_codigo_su">Habilita el campo Otro Código al momento de registrar un equipo o vehículo</string>

    <string name="tipo_equipo">Tipo de Equipo</string>
    <string name="select_tipo_equipo">"Por favor seleccione el Tipo de Equipo de la lista que aparecerá a continuación"</string>

    <string name="config_acceso">Configuración de Permisos para este Dispositivo</string>
    <string name="ver_info_ventas">Permitir a este dispositivo ver la información de ventas</string>
    <string name="ver_info_ventas_su">Permitir a este dispositivo ver la información de ventas, de los centros de costos anexados a la cuenta</string>

    <string name="foto_eq">Foto EQ</string>
    <string name="Tipo_eq">Tipo EQ</string>

    <string name="imagen_equipo">Imagen Equipo</string>
    <string name="acceso_conf">Acceso a Configuraciones</string>
    <string name="acceso_conf_su">El Acceso a las configuraciones está restringido, por favor contacte a su proveedor para cambiar las configuraciones de este dispositivo</string>
    <string name="user_admon">User Admon</string>
    <string name="pass_admon">Pass Admon</string>

    <string name="title_activity_fullscreen"></string>
    <string name="dummy_button">Ir al Home</string>
    <string name="dummy_content">Service Cloud</string>

    <string name="servicios_para">Servicios Para:</string>
    <string name="seleccionar_servicios">Seleccionar Servicios</string>
    <string name="select_servicio_su">La lista de servicio depende del tipo de equipo seleccionado anteriormente.</string>
    <string name="title_activity_select_tipo_equipo">SelectTipoEquipoActivity</string>
</resources>
